<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeworks.homework_one.HomeworkOneActivity">

    <Button
        android:id="@+id/toast"
        android:layout_width="@dimen/match_constraint_dimen"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end_edited"
        android:text="@string/toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/count"
        android:layout_width="@dimen/match_constraint_dimen"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end_edited"
        android:layout_marginBottom="@dimen/margin_end_edited"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="@dimen/match_constraint_dimen"
        android:layout_height="@dimen/match_constraint_dimen"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end_edited"
        android:background="#FFFF00"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_hw_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toast" />


</androidx.constraintlayout.widget.ConstraintLayout>