<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenges.challenge_three.ProductListActivity">

    <TextView
        android:id="@+id/header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_end"
        android:text="@string/shopping_list"
        android:textSize="@dimen/list_label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_list"
        app:layout_constraintVertical_bias="0.097">

        <TextView
            android:id="@+id/product_one"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/product_six"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_list" />

        <TextView
            android:id="@+id/product_five"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/product_ten"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_four" />

        <TextView
            android:id="@+id/product_four"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/product_nine"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_three" />

        <TextView
            android:id="@+id/product_three"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/product_eight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_two" />

        <TextView
            android:id="@+id/product_six"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_list" />

        <TextView
            android:id="@+id/product_ten"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_nine"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/product_nine"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_eight" />

        <TextView
            android:id="@+id/product_eight"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_seven" />

        <TextView
            android:id="@+id/product_seven"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_end_edited"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_two"
            app:layout_constraintTop_toBottomOf="@+id/product_six" />

        <TextView
            android:id="@+id/product_two"
            android:layout_width="@dimen/product_item_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/list_label_text_size"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/product_seven"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_one" />
    </LinearLayout>

    <Button
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_margin_botom"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/find_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_shop"
        app:layout_constraintBottom_toTopOf="@+id/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/shop"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.183" />

</androidx.constraintlayout.widget.ConstraintLayout>